# DeepSeek-TUI

./: CHANGELOG.md  Cargo.toml  Dockerfile  FORK_README.md  README.ja-JP.md  README.md  README.vi.md  README.zh-CN.md
.cargo/: audit.toml
.github/workflows/: ci.yml  dco.yml  release.yml
crates/agent/: Cargo.toml
crates/app-server/: Cargo.toml
crates/app-server/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  update.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  tests.rs
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/hooks/: Cargo.toml
crates/protocol/src/: fleet.rs
crates/tools/: Cargo.toml
crates/tui/: CHANGELOG.md  Cargo.toml  build.rs
crates/tui/src/: child_env.rs  config.rs  config_ui.rs  main.rs  mcp.rs  models.rs  palette.rs  pricing.rs  project_context.rs  prompts.rs
crates/tui/src/client/: chat.rs
crates/tui/src/commands/: config.rs  goal.rs  mod.rs  session.rs
crates/tui/src/core/: engine.rs
crates/tui/src/core/engine/: dispatch.rs  tests.rs  tool_catalog.rs  tool_setup.rs  turn_loop.rs
crates/tui/src/fleet/: ledger.rs  mod.rs  profile.rs
crates/tui/src/mcp/: tests.rs
crates/tui/src/prompts/: constitution.md
crates/tui/src/tools/: arg_repair.rs
crates/tui/src/tools/shell/: tests.rs
crates/tui/src/tools/subagent/: mailbox.rs  mod.rs
crates/tui/src/tui/: app.rs  file_mention.rs  history.rs  mouse_ui.rs  sidebar.rs  ui.rs
crates/tui/src/tui/app/: tests.rs
crates/tui/src/tui/history/: agent_activity.rs
crates/tui/src/tui/ui/: tests.rs
crates/tui/src/tui/views/: mod.rs
crates/tui/src/vision/: tools.rs
docs/: CONFIGURATION.md  INSTALL.md  PROMPT_MODE_MATRIX.md  PROVIDERS.md  TOOL_SURFACE.md  WHALEFLOW_VISION_ALIGNMENT.md
integrations/telegram-bridge/src/: index.mjs
integrations/telegram-bridge/test/: dispatch-concurrency.test.mjs
npm/codewhale/: package.json
scripts/: check-provider-registry.py
web/app/[locale]/: page.tsx
(+2 files in other folders)
