[package]
name = "codewhale-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Config schema and precedence model for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
codewhale-execpolicy = { path = "../execpolicy", version = "0.8.63" }
codewhale-secrets = { path = "../secrets", version = "0.8.63" }
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
